# math_extra_lib

./: .gitignore  .gitmodules  Dependencies.md  README.md  Release log.md  __init__.py  check_dependencies.py  dependencies.json  matrix_solver.py  poly_solver.py  polynomial.py  setup.cfg  special_functions.py  vectors_matrices.py
Documentation/: index.md
Documentation/Design/: DE001_polynomials.md  DE002_special_functions.md  DE003_vectors_matrices.md  DE004_poly_solver.md  DE005_interpolation.md  index.md
Documentation/References/: UD000_math_extra_lib_reference.md  UD001_polynomial_reference.md  UD002_special_functions.md  UD003_vectors_matrices_reference.md  UD004_matrix_solver_reference.md  UD005_ploy_solver_reference.md  UD005_poly_solver_reference.md  index.md
Documentation/Requirements/: RE000_library_requirements.md  RE001_polynomials_requirements.md  RE002_special_functions.md  RE003_vectors_and_matrices.md  RE004_matrix_solver.md  RE005_poly_solver.md  index.md
Documentation/Tests/: TE000_library_requirements.md  TE001_polynomials.md  TE002_special_functions.md  TE003_vectors_matrices.md  TE004_matrix_solver.md  TE005_poly_solver.md  index.md  tested_OS.md  traceability.md
Documentation/UML/: library_components.pu
Documentation/UML/matrix_solver/: matrix_solver_components.iuml
Tests/: DT001_polynomial.py  DT002_special_functions.py  DT003_vectors_matrices.py  DT004_matrix_solver.py  DT005_poly_solver.py  UT001_polynomial.py  UT002_special_functions.py  UT003_vectors_matrices.py  UT004_matrix_solver.py  UT005_poly_solver.py
(+15 files in other folders)
