[metadata]
name = math_extra_lib
version = 1.0.0
author = Anton Azarov
author_email = a.azarov@diagnoptics.com
description = Linear algebra, special functions, polynomial interpolation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/diagnoptics/python/math_extra_lib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.6
package_dir =
    math_extra_lib =
packages = math_extra_lib, math_extra_lib.Tests
install_requires =
    introspection_lib >= 0.5

[options.package_data]
* = dependencies.json
